--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -40,7 +40,8 @@ body {
 	background: #ffffff;
 	color: #333333;
 	margin: 0 auto;
-	max-width: 960px;
+	max-width: 1024px;
+	min-width: 1024px;
 	overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
 	   -moz-box-shadow: 0 0 0.3em #255b17;
 	-webkit-box-shadow: 0 0 0.3em #255b17;
@@ -49,6 +50,7 @@ body {
 
 #grailsLogo {
 	background-color: #abbf78;
+	text-align: center;
 }
 
 /* replace with .no-boxshadow body if you have modernizr available */
